recursion.cons.last.Last.scala.error
Compilation error:
Last:4: error: not found: value t
  t = l.tail;
  ^Last:6: error: not found: value t
  if(t == Nil)
     ^